src/objects/Secure_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When on, custom triggers won&apos;t fire</inlineHelpText>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>baseURL__c</fullName>
        <defaultValue>&quot;http://secure.enclude.ie:5000/&quot;</defaultValue>
        <inlineHelpText>The secure web site is at this address</inlineHelpText>
        <label>baseURL</label>
        <type>Url</type>
    </fields>
    <label>Secure settings</label>
</CustomObject>